# pwag

./: CMakeLists.txt  readme
shaders/: sbsVS.glsl  shader1FS.glsl  shader1VS.glsl
src/: ExampleGame.cpp  ExampleGame.h  Game.cpp  Game.h  Main.cpp  Main.h  baseHeader.h
src/GUI/: NkWindow.cpp  NkWindow.h  Options.cpp  Options.h
src/Objects/: AbstractGameObject.cpp  AbstractGameObject.h  Camera.cpp  Camera.h  Enemy.cpp  Enemy.h  NonPlayerObject.cpp  NonPlayerObject.h  SimpleObject.cpp  SimpleObject.h
src/Objects/Particle/: Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h
src/ResoureManagment/: ResourceManager.cpp  ResourceManager.h  SOIL.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VaoObject.cpp  VaoObject.h
